# SimpleVPK

./: .gitignore  CMakeLists.txt  README.md
sce_sys/livearea/contents/: template.xml
src/: main.cpp  main.hpp
src/net/: download.cpp  download.hpp
src/screens/: details.cpp  details.hpp  installer.cpp  installer.hpp  list.cpp  list.hpp
src/utils/: filesystem.cpp  filesystem.hpp  nosleep_thread.cpp  nosleep_thread.h  search.cpp  search.hpp  vitaPackage.cpp  vitaPackage.h  zip.cpp  zip.h
updater/: CMakeLists.txt  main.c
